# ucsd-student-evals

./: Cargo.toml  Dockerfile  README.md  config.toml.example  docker-compose.yml
.sqlx/: query-01aed80b26ec30c77c49291c853ffdb27cafb1e89bbb516eed6e27abcefa1a97.json  query-09d679a6c4271e7d97c8d7b88b5f0f5cfec0924f6987a04d9922ceeffb09f41e.json  query-11a3f6953ffb2bf0b698aa88b768c3196153a9c64a95efec777f0d79acdf85fb.json  query-23189c8c3d7eea702f7f3108932dfb7dbccdbd4171cd0e494d741ba5085bce51.json  query-2a8fa9721adc4f4887076663be1ae4f85618e6f3bc478a46eee30be42ed1ed95.json  query-33a46ef71b6d798e3255579b4463b275c82c2f028d68d4c8a704996c7630d8d6.json  query-34f66ed9484eabb8322bb08b808f6f89d7f75626be42fa2a67bf2625ac12065d.json  query-36d72954b69770eb07f2c4e3ee32fa87d05c9cca622317a34f2d3055581d146b.json  query-41901e1eef3e9950594df873497c88a25aaf1e89530d250b6e8307fd963c003a.json  query-581b09701b9bff37acaed348536e5b627b22b495f2a8cc127cf40577dbfdd5cd.json  query-61389c14dad1e6f7b982093eefbbfedccc55eb0f75f6476a82cbe441bd403d0a.json  query-61b9031e4cce16aa91c64bb63b8b938ff1e53c661a7fb95be35b9eecd1d4fc90.json  query-62998b45480c944dfece2d9f6e5daeea5eb292b06859001dd26281c7c4e8b31a.json  query-651d96fe0ab20adbf33336863a47171eec6635350be4356452f140eefc480fb2.json  query-75533adcc12d389ee236bc8405cc1ee84241ac641a85acbd642377f6ef8a09e6.json  query-75dfae5689287ab5dcea5dfd60339c1e2fa5ea678769c9778611f60b8f1b84be.json  query-77efc3c27fe1e28152541155645af5e3997a1f86e8348b3c6919c2f9bb199656.json  query-864e7925bb99bfe8d6721d3e01ca98aaae6c22a7baf1196286b87dc8c40c2c81.json  query-88a3f6d1646343a600cac1e77b447a5931924d90a6c0e35c24c3d5d1dbd7457b.json  query-982f516bb5d351825f1f701c0cac99f544faead01e7c0d4298300979552e66da.json  query-a2ea49dcbb85b377b80d032b6d4d60359b0c5996a5ef0d343bcd9a7507ea6bf0.json  query-a9d6c9e2cfefed5598431fd0c126f33c1f7b0a748c73aff7d01c82b3bc268ca2.json  query-c1555b2cc4c88b608478598694955529a16d7b4501c09c44f671ebd6fa3022ea.json  query-dfca649234827c22d6407d94555514476429b616ada464e7438acfc9e7c601fc.json  query-fa11bc83d2b077685da288d29e232cf3334b60fe14acafb33a189e2f3125b99d.json
src/: common.rs  (+6 more)
(+18 files in other folders)
