[package]
name = "ucsd-student-evals"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
indicatif = "0.17.9"
futures = "0.3.31"
config = "0.14.1"
diesel = { version = "2.2.4", features = ["returning_clauses_for_sqlite_3_35", "sqlite"] }
regex = "1.11.1"
