[package]
name = "ucsd-student-evals"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
indicatif = "0.17.9"
futures = "0.3.31"
config = "0.14.1"
diesel = { version = "2.2.4", features = ["returning_clauses_for_sqlite_3_35", "sqlite", "serde_json"] }
regex = "1.11.1"
scraper = "0.21.0"
tokio-retry = "0.3.0"
serde_json = "1.0.132"
env_logger = "0.11.5"
axum = "0.7.9"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["trace"] }
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
